// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PureOptionDefault Component should handle array 1`] = `<DocumentFragment />`;

exports[`PureOptionDefault Component should handle array 2`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: 
    <strong>
       [ ] 
    </strong>
     
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle boolean type 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: 
    <strong>
       false 
    </strong>
     
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle null value 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: 
    <strong>
       null 
    </strong>
     
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should handle string 1`] = `
<DocumentFragment>
  <div
    class="small"
  >
    Default: 
    <strong>
       "" 
    </strong>
     
  </div>
</DocumentFragment>
`;

exports[`PureOptionDefault Component should return null when the value is default 1`] = `<DocumentFragment />`;
